--- a/index.html
+++ b/index.html
@@ -82,42 +82,18 @@
     <div class="container-instalaciones">
       <!-- Galería de imágenes -->
       <div class="container-galeria">
-        <div class="galeria">
-          <p>Imagen</p>
-        </div>
-        <div class="galeria">
-          <p>Imagen</p>
-        </div>
-        <div class="galeria">
-          <p>Imagen</p>
-        </div>
-        <div class="galeria">
-          <p>Imagen</p>
-        </div>
-        <div class="galeria">
-          <p>Imagen</p>
-        </div>
-        <div class="galeria">
-          <p>Imagen</p>
-        </div>
-        <div class="galeria">
-          <p>Imagen</p>
-        </div>
-        <div class="galeria">
-          <p>Imagen</p>
-        </div>
-        <div class="galeria">
-          <p>Imagen</p>
-        </div>
-        <div class="galeria">
-          <p>Imagen</p>
-        </div>
-        <div class="galeria">
-          <p>Imagen</p>
-        </div>
-        <div class="galeria">
-          <p>Imagen</p>
-        </div>
+        <img src="/media/imagenes/instalaciones/Instalaciones1.jpg" alt="instalaciones" class="galeria">
+        <img src="/media/imagenes/instalaciones/Instalaciones2.jpg" alt="instalaciones" class="galeria">
+        <img src="/media/imagenes/instalaciones/Instalaciones3.jpg" alt="instalaciones" class="galeria">
+        <img src="/media/imagenes/instalaciones/Instalaciones4.jpg" alt="instalaciones" class="galeria">
+        <img src="/media/imagenes/instalaciones/Instalaciones5.jpg" alt="instalaciones" class="galeria">
+        <img src="/media/imagenes/instalaciones/Instalaciones6.jpg" alt="instalaciones" class="galeria">
+        <img src="/media/imagenes/instalaciones/Instalaciones7.jpg" alt="instalaciones" class="galeria">
+        <img src="/media/imagenes/instalaciones/Instalaciones8.jpg" alt="instalaciones" class="galeria">
+        <img src="/media/imagenes/instalaciones/Instalaciones9.jpg" alt="instalaciones" class="galeria">
+        <img src="/media/imagenes/instalaciones/Instalaciones10.jpg" alt="instalaciones" class="galeria">
+        <img src="/media/imagenes/instalaciones/Instalaciones11.jpg" alt="instalaciones" class="galeria">
+        <img src="/media/imagenes/instalaciones/Instalaciones12.jpg" alt="instalaciones" class="galeria">
       </div>
     </div>
   </section>
