--- a/index.html
+++ b/index.html
@@ -82,18 +82,18 @@
     <div class="container-instalaciones">
       <!-- Galería de imágenes -->
       <div class="container-galeria">
-        <div class="galeria"><img src="/media/imagenes/instalaciones/Instalaciones1.jpg" alt=""> </div>
-        <div class="galeria"><img src="/media/imagenes/instalaciones/Instalaciones2.jpg" alt=""></div>
-        <div class="galeria"><img src="/media/imagenes/instalaciones/Instalaciones3.jpg" alt=""></div>
-        <div class="galeria"><img src="/media/imagenes/instalaciones/Instalaciones4.jpg" alt=""></div>
-        <div class="galeria"><img src="/media/imagenes/instalaciones/Instalaciones5.jpg" alt=""></div>
-        <div class="galeria"><img src="/media/imagenes/instalaciones/Instalaciones6.jpg" alt=""></div>
-        <div class="galeria"><img src="/media/imagenes/instalaciones/Instalaciones7.jpg" alt=""></div>
-        <div class="galeria"><img src="/media/imagenes/instalaciones/Instalaciones8.jpg" alt=""></div>
-        <div class="galeria"><img src="/media/imagenes/instalaciones/Instalaciones9.jpg" alt=""></div>
-        <div class="galeria"><img src="/media/imagenes/instalaciones/Instalaciones10.jpg" alt=""></div>
-        <div class="galeria"><img src="/media/imagenes/instalaciones/Instalaciones11.jpg" alt=""></div>
-        <div class="galeria"><img src="/media/imagenes/instalaciones/Instalaciones12.jpg" alt=""></div>
+        <div class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones1.jpg" alt=""> </div>
+        <div class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones2.jpg" alt=""></div>
+        <div class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones3.jpg" alt=""></div>
+        <div class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones4.jpg" alt=""></div>
+        <div class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones5.jpg" alt=""></div>
+        <div class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones6.jpg" alt=""></div>
+        <div class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones7.jpg" alt=""></div>
+        <div class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones8.jpg" alt=""></div>
+        <div class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones9.jpg" alt=""></div>
+        <div class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones10.jpg" alt=""></div>
+        <div class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones11.jpg" alt=""></div>
+        <div class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones12.jpg" alt=""></div>
       </div>
     </div>
   </section>
@@ -120,32 +120,43 @@
 
         <!-- Galería de imágenes -->
         <div class="actividades">
-          <p>Imagen</p>
+          <img src="/media/imagenes/actividades/indoor/Actividades1.jpg" alt="clase de flexibicilad">
+          <p>Flexibilidad</p>
         </div>
         <div class="actividades">
-          <p>Imagen</p>
+          <img src="/media/imagenes/actividades/indoor/Actividades2.jpg" alt="clase de flexibicilad">
+          <p>Kick Boxing</p>
         </div>
         <div class="actividades">
-          <p>Imagen</p>
+          <img src="/media/imagenes/actividades/indoor/Actividades3.jpg" alt="clase de flexibicilad">
+          <p>Halterofilia</p>
         </div>
         <div class="actividades">
-          <p>Imagen</p>
+          <img src="/media/imagenes/actividades/indoor/Actividades4.jpg" alt="clase de flexibicilad">
+          <p>Body Combat</p>
         </div>
         <div class="actividades">
-          <p>Imagen</p>
+          <img src="/media/imagenes/actividades/indoor/Actividades5.jpg" alt="clase de flexibicilad">
+          <p>Rítmica Kids</p>
         </div>
         <div class="actividades">
-          <p>Imagen</p>
+          <img src="/media/imagenes/actividades/indoor/Actividades6.jpg" alt="clase de flexibicilad">
+          <p>Escalada</p>
         </div>
         <div class="actividades">
-          <p>Imagen</p>
+          <img src="/media/imagenes/actividades/indoor/Actividades7.jpg" alt="clase de flexibicilad">
+          <p>Fitness Duo</p>
         </div>
         <div class="actividades">
-          <p>Imagen</p>
+          <img src="/media/imagenes/actividades/indoor/Actividades8.jpg" alt="clase de flexibicilad">
+          <p>Yoga</p>
         </div>
         <div class="actividades">
-          <p>Imagen</p>
+          <img src="/media/imagenes/actividades/indoor/Actividades9.jpg" alt="clase de flexibicilad">
+          <p>Fitness</p>
         </div>
+      
+      </div>
       </div>
     </div>
   </section>
