--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
       <div class="fondo-activate">
         <div class="localizacion">
           <div class="imagen-mapa">
-            <p>Imagen</p>
+            <img src="/media/imagenes/activate/mapa.png" alt="">
+
           </div>
         </div>
 
