--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
     <div class="container-actividades">
       <div class="container-galeria-actividades">
         <div class="pestanas">
-          <p>INDOOR</p>
+          <a href="#actividades"> INDOOR</a>
         </div>
         <div class="pestanas">
-          <p>OUTDOOR</p>
+          <a href="#actividades"> OUTDOOR</a>
         </div>
         <div class="pestanas">
-          <p>AQUAZONE</p>
+          <a href="#actividades"> AQUAZONE</a>
         </div>
 
         <!-- Galería de imágenes -->
