--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
 
       <!-- Video  -->
       <div class="container-video">
-        <p>Video</p>
+        <video class="video_presentacion" width="600" height="400" autoplay controls muted>
+          <source src="/media/video/videoGim.mp4" type="video/mp4">
+        </video>
       </div>
 
       <!-- Descripcion2  -->
