--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
           <li><a href="">INICIO</a></li>
           <li><a href="#conocenos">CONÓCENOS</a></li>
           <li><a href="#instalaciones">INSTALACIONES</a></li>
-          <li><a href="#actividades">ACTIVIDADES</a></li>
+          <li><a href="#actividades">ACTIVIDADES</a>
+            <ul class="lista-submenu">
+              <li><a href="#pindoor">INDOOR</a></li>
+              <li><a href="#poutdoor">OUTDOOR</a></li>
+              <li><a href="#paquazone">AQUAZONE</a></li>
+            </ul>
+
+
+          </li>
           <li><a href="#activate">ACTÍVATE</a></li>
         </ul>
       </nav>
@@ -110,13 +118,13 @@
     <!-- Menú / pestañas-->
     <div class="container-actividades">
       <div class="container-galeria-actividades">
-        <div class="pestanas">
+        <div class="pestanas" id="pindoor">
           <a href="#actividades"> INDOOR</a>
         </div>
-        <div class="pestanas">
+        <div class="pestanas" id="poutdoor">
           <a href="#actividades"> OUTDOOR</a>
         </div>
-        <div class="pestanas">
+        <div class="pestanas" id="paquazon">
           <a href="#actividades"> AQUAZONE</a>
         </div>
 
