--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sport Time</title>
   <link rel="stylesheet" href="/css/estilos.css" />
+  <script src="/js/scripts.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Teko&display=swap" rel="stylesheet" />
@@ -15,6 +16,7 @@
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <!-- Google Icons  -->
+  
 </head>
 
 <body>
@@ -265,6 +267,13 @@
 
     </div>
   </footer>
+
+<script>
+
+ 
+</script>
+
+
 </body>
 
 </html>
