Formulario con js

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <!-- Google Icons  -->
-  
+
 </head>
 
 <body>
@@ -191,35 +191,39 @@
         </div>
 
         <!-- Formulario -->
-        <div class="container-formulario">
+
+        <div id="container-formulario">
           <form id="formulario" action="">
             <p class="datos-contacto">Datos de contacto</p>
-
             <label for="nombre">
               <span class="material-symbols-outlined"> account_circle </span>
               Nombre</label>
-            <input type="text" name="nombre" id="nombre" />
-
+            <input type="text" id="formNombre" name="nombre" required />
             <label for="apellidos"><span class="material-symbols-outlined"> account_circle </span>
               Apellidos</label>
-            <input type="text" name="apellidos" id="apellidos" />
-
+            <input type="text" id="formApellidos" name="apellidos" required />
             <label for="telefono">
-              <span class="material-symbols-outlined">call </span>
+              <span class="material-symbols-outlined">call</span>
               Télefono</label>
-            <input type="number" name="telefono" id="telefono" />
-
+            <input type="number" id="formTel" name="telefono" min="99999999" max="999999999" required />
             <label for="email"><span class="material-symbols-outlined">
                 alternate_email
               </span>
               E-mail</label>
-            <input type="email" name="email" id="email" />
-
-            <button type="submit">Enviar</button>
+            <input type="email" id="formEmail" name="email" required />
+            <button id="botonFormulario" onclick="contactarAbrir()" type="button">Enviar</input>
           </form>
         </div>
+
+        <div id="modalFormulario">
+          <div id="modalBoxF">
+            <p id="mensajeFormulario"></p>
+            <button id="botonfmodal" onclick="contactarCerrar()">OK</button>
+          </div>
+        </div>
+
+
       </div>
-    </div>
   </section>
 
   <!-- Pie de página  -->
@@ -268,10 +272,10 @@
     </div>
   </footer>
 
-<script>
+  <script>
 
- 
-</script>
+
+  </script>
 
 
 </body>
