--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <body>
   <header id="cabecera">
     <!-- Menú cabecera  -->
-    <div class="menu">
-      <nav>
+    <div id="menu">
+      <nav id="menuBar">
         <ul class="lista-menu">
           <li><a href="">INICIO</a></li>
           <li><a href="#conocenos">CONÓCENOS</a></li>
