--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <!-- Google Icons  -->
 
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
 </head>
 
 <body>
@@ -93,19 +96,22 @@
     <!-- Contenido sección instalaciones -->
     <div class="container-instalaciones">
       <!-- Galería de imágenes -->
-      <div class="container-galeria">
-        <div class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones1.jpg" alt=""> </div>
-        <div class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones2.jpg" alt=""></div>
-        <div class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones3.jpg" alt=""></div>
-        <div class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones4.jpg" alt=""></div>
-        <div class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones5.jpg" alt=""></div>
-        <div class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones6.jpg" alt=""></div>
-        <div class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones7.jpg" alt=""></div>
-        <div class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones8.jpg" alt=""></div>
-        <div class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones9.jpg" alt=""></div>
-        <div class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones10.jpg" alt=""></div>
-        <div class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones11.jpg" alt=""></div>
-        <div class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones12.jpg" alt=""></div>
+
+      <div class="container-galeria" data-aos="zoom-out"  data-aos-duration="1000">
+
+     
+        <div data-aos="fade-right"  data-aos-duration="1000" class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones1.jpg" alt=""> </div>
+        <div data-aos="fade-right"  data-aos-duration="1000" class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones2.jpg" alt=""></div>
+        <div data-aos="fade-left"  data-aos-duration="1000" class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones3.jpg" alt=""></div>
+        <div data-aos="fade-left"  data-aos-duration="1000" class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones4.jpg" alt=""></div>
+        <div data-aos="fade-right"  data-aos-duration="1000" class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones5.jpg" alt=""></div>
+        <div data-aos="fade-right"  data-aos-duration="1000" class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones6.jpg" alt=""></div>
+        <div data-aos="fade-left"  data-aos-duration="1000" class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones7.jpg" alt=""></div>
+        <div data-aos="fade-left"  data-aos-duration="1000" class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones8.jpg" alt=""></div>
+        <div data-aos="fade-right"  data-aos-duration="1000" class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones9.jpg" alt=""></div>
+        <div data-aos="fade-right"  data-aos-duration="1000" class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones10.jpg" alt=""></div>
+        <div data-aos="fade-left"  data-aos-duration="1000" class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones11.jpg" alt=""></div>
+        <div data-aos="fade-left"  data-aos-duration="1000" class="galeria_inst"><img src="/media/imagenes/instalaciones/Instalaciones12.jpg" alt=""></div>
       </div>
     </div>
   </section>
@@ -119,7 +125,7 @@
     <!-- Contenido sección actividades -->
     <!-- Menú / pestañas-->
     <div class="container-actividades">
-      <div class="container-galeria-actividades">
+      <div class="container-galeria-actividades" data-aos="zoom-out"  data-aos-duration="1000">
         <div class="pestanas" id="pindoor">
           <a href="#actividades"> INDOOR</a>
         </div>
@@ -180,10 +186,10 @@
     </div>
 
     <!-- Contenido sección Actívate -->
-    <div class="container-activate">
+    <div class="container-activate" >
       <!-- Imagen localizacion -->
-      <div class="fondo-activate">
-        <div class="localizacion">
+      <div class="fondo-activate" data-aos="zoom-out"  data-aos-duration="1000">
+        <div class="localizacion" data-aos="fade-right"  data-aos-duration="1000" >
           <div class="imagen-mapa">
             <img src="/media/imagenes/activate/mapa.png" alt="">
 
@@ -192,7 +198,7 @@
 
         <!-- Formulario -->
 
-        <div id="container-formulario">
+        <div id="container-formulario" data-aos="fade-left"  data-aos-duration="1000" >
           <form id="formulario" action="">
             <p class="datos-contacto">Datos de contacto</p>
             <label for="nombre">
@@ -273,8 +279,7 @@
   </footer>
 
   <script>
-
-
+    AOS.init();
   </script>
 
 
