--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@
           <p id="pindoor" class="pestanasP pestanasPActiva" onclick="selectPest('act_indoor','pindoor')"> INDOOR</p>
         </div>
         <div class="pestanas">
-          <p  id="poutdoor" class="pestanasP pestanasPActiva" onclick="selectPest('act_outdoor','poutdoor')"> OUTDOOR</p>
+          <p  id="poutdoor" class="pestanasP pestanasPActiva pestanasActivaRefresh" onclick="selectPest('act_outdoor','poutdoor')"> OUTDOOR</p>
         </div>
         <div class="pestanas">
-          <p  id="paquazone" class="pestanasP pestanasPActiva" onclick="selectPest('act_aquazone','paquazone')"> AQUAZONE</p>
+          <p  id="paquazone" class="pestanasP pestanasPActiva pestanasActivaRefresh" onclick="selectPest('act_aquazone','paquazone')"> AQUAZONE</p>
         </div>
 
         <!-- Galería de imágenes -->
