--- a/index.html
+++ b/index.html
@@ -147,12 +147,6 @@
           </span></button>
 
       </div>
-
-
-
-
-
-
     </div>
   </section>
 
@@ -166,14 +160,16 @@
     <!-- Menú / pestañas-->
     <div class="container-actividades">
       <div class="container-galeria-actividades" name="link_container" data-aos="zoom-out" data-aos-duration="1000">
-        <div class="pestanas" >
+        <div class="pestanas">
           <p id="pindoor" class="pestanasP pestanasPActiva" onclick="selectPest('act_indoor','pindoor')"> INDOOR</p>
         </div>
         <div class="pestanas">
-          <p  id="poutdoor" class="pestanasP pestanasPActiva pestanasActivaRefresh" onclick="selectPest('act_outdoor','poutdoor')"> OUTDOOR</p>
+          <p id="poutdoor" class="pestanasP pestanasPActiva pestanasActivaRefresh"
+            onclick="selectPest('act_outdoor','poutdoor')"> OUTDOOR</p>
         </div>
         <div class="pestanas">
-          <p  id="paquazone" class="pestanasP pestanasPActiva pestanasActivaRefresh" onclick="selectPest('act_aquazone','paquazone')"> AQUAZONE</p>
+          <p id="paquazone" class="pestanasP pestanasPActiva pestanasActivaRefresh"
+            onclick="selectPest('act_aquazone','paquazone')"> AQUAZONE</p>
         </div>
 
         <!-- Galería de imágenes -->
